--- a/frontend/src/components/components.module.css
+++ b/frontend/src/components/components.module.css
@@ -7,9 +7,9 @@
 }
 
 .card {
+	composes: bgPrimary;
 	padding: 1em;
-	border: 0.1rem solid black;
-	background-color: gray;
+	border: 0.3rem solid var(--accent-300);
 	border-radius: 0.5rem;
 	;
 	margin: 2rem;
@@ -24,19 +24,53 @@
 }
 
 .create {
-	font-size: 2vw;
-
 	margin: 2rem;
+	display: flex;
 
 }
 
 .button {
-	composes: bgPrimary accent;
+	composes: bgNeutralLight accent;
+
 	font-size: 1vw;
 	margin: 1rem;
 	border: 0;
 	padding: 8px;
 	padding: 1rem;
 	border-radius: 1em;
+
+
+}
+
+.button:hover {
+	opacity: 0.8;
+}
+
+.button:active {
+	opacity: 1.0;
+	color: var(--accent-300);
+
+}
+
+.gameButton {
+	composes: button;
+	border-style: solid;
+	border-width: 0.1em;
+}
+
+.or {
+	display: flex;
+	align-items: center;
+}
+
+.input {
+	padding: 6px 10px;
+	border: 1px solid var(--accent-300);
+}
+
+.info {
+	color: var(--accent-900);
+	text-align: center;
+	font-size: 1vw;
 
 }
