--- a/frontend/src/styles/index.module.css
+++ b/frontend/src/styles/index.module.css
@@ -1,16 +1,25 @@
+@import './colors.module.css';
+
+* {
+	box-sizing: border-box;
+}
+
 :root {
 	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	color: var(--primary-100);
+	background-color: var(--neutral-500);
+	font-weight: light;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	box-sizing: border-box;
 }
 
 body {
