--- a/frontend/src/styles/app.module.css
+++ b/frontend/src/styles/app.module.css
@@ -1,3 +1,40 @@
+@import './colors.module.css';
+
+* {
+	box-sizing: border-box;
+}
+
+:root {
+	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+	line-height: 1.5;
+	font-weight: 400;
+
+	color-scheme: light dark;
+	color: var(--primary-100);
+	background-color: var(--neutral-500);
+	font-weight: light;
+
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+
+	box-sizing: border-box;
+}
+
+body {
+	margin: 0;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	align-items: center;
+	justify-content: center;
+}
+
+#root {
+	max-width: 1200px;
+}
+
 .app {
 	flex: 1;
 	display: flex;
