--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -22,22 +22,15 @@
 	box-sizing: border-box;
 }
 
-body {
+/* body {
 	margin: 0;
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
 	align-items: center;
 	justify-content: center;
-}
+} */
 
 #root {
 	max-width: 1200px;
-}
-
-.app {
-	flex: 1;
-	display: flex;
-	justify-content: center;
-
 }
