--- a/frontend/src/components/utility.module.css
+++ b/frontend/src/components/utility.module.css
@@ -1,7 +1,32 @@
+@import '../styles/colors.module.css';
+
 .header {
 	text-align: center;
+	background-color: var(--accent-500);
+	margin: none;
+}
+
+.header ul {
+	list-style-type: none;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	margin: 0;
+}
+
+.header a {
+	text-decoration: none;
+	color: var(--neutral-100);
+	transition: color 0.25s;
+}
+
+.header a:hover {
+	color: var(--primary-500);
 }
 
 .footer {
+	padding: 10px;
+	margin-top: auto;
 	text-align: center;
+	background-color: var(--primary-500);
 }
