--- a/frontend/src/pages/create_game.module.css
+++ b/frontend/src/pages/create_game.module.css
@@ -11,7 +11,7 @@
 }
 
 .rulesetElement {
-	background-color: var(--neutral-700);
+	background-color: var(--primary-500);
 	border-radius: 10px;
 	padding: 10px;
 	text-align: center;
