--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -11,7 +11,7 @@
 
 	color-scheme: light dark;
 	color: var(--primary-100);
-	background-color: var(--neutral-500);
+	background-color: var(--neutral-700);
 	font-weight: light;
 
 	font-synthesis: none;
@@ -22,14 +22,9 @@
 	box-sizing: border-box;
 }
 
-/* body {
+body {
 	margin: 0;
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	align-items: center;
-	justify-content: center;
-} */
+}
 
 #root {
 	max-width: 1200px;
