--- a/frontend/src/styles/utility.module.css
+++ b/frontend/src/styles/utility.module.css
@@ -3,6 +3,12 @@
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	width: 100vw;
+}
+
+.centerDiv {
+	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex: 1;
 }
