add status for players

--- a/frontend/src/pages/client.module.css
+++ b/frontend/src/pages/client.module.css
@@ -1,17 +1,26 @@
 @import '../styles/colors.module.css';
 
-.roster {
+.container {
 	padding: 8px;
 	background-color: var(--neutral-300);
 	border-radius: 3px;
 	width: fit-content;
 	margin: 10px;
+	display: inline-flex;
+	flex-direction: column;
 }
 
-.rosterTitle {
+.title {
 	font-size: 2em;
 	color: var(--primary-700);
 	text-align: center;
+}
+
+.statusBar {
+	text-align: center;
+	background-color: var(--primary-700);
+	padding: 8px;
+	color: var(--neutral-100);
 }
 
 .roster ul {
