--- a/frontend/src/pages/client.module.css
+++ b/frontend/src/pages/client.module.css
@@ -11,19 +11,36 @@
 }
 
 .chatDisplay {
+	display: flex;
+	flex-direction: column;
+	gap: 8px;
+	margin: 8px;
+	height: 20vh;
 	background-color: var(--neutral-300);
+	opacity: 0.8;
+	padding: 10px;
+	border-radius: 3px;
 }
 
 .chatDisplay ul {
-	padding: 8px;
+	flex: 1;
+	border-radius: 3px;
+	padding: 4px;
+	overflow: auto;
+	margin: 0px;
 	display: flex;
 	flex-direction: column;
 	list-style-type: none;
+	background-color: var(--neutral-500);
 }
 
+
+
 .chatElement {
+	padding-left: 4px;
 	display: flex;
-	gap: 8px;
+	gap: 4px;
+	line-height: 1.2rem;
 }
 
 .chatElementFrom {
@@ -31,7 +48,7 @@
 }
 
 .chatElementMsg {
-	color: var(--primary-500);
+	color: var(--primary-900);
 }
 
 .title {
