--- a/frontend/src/pages/client.module.css
+++ b/frontend/src/pages/client.module.css
@@ -10,12 +10,23 @@
 	flex-direction: column;
 }
 
+.waiting {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+}
+
+.spacer {
+	flex: 1;
+}
+
 .chatDisplay {
+	margin-top: auto;
 	display: flex;
 	flex-direction: column;
 	gap: 8px;
 	margin: 8px;
-	height: 20vh;
+	height: 30vh;
 	background-color: var(--neutral-300);
 	opacity: 0.8;
 	padding: 10px;
