--- a/frontend/src/pages/create_game.module.css
+++ b/frontend/src/pages/create_game.module.css
@@ -11,6 +11,21 @@
 }
 
 .rulesetElement {
+	background-color: var(--accent-700);
+	border-radius: 10px;
+	padding: 10px;
+	text-align: center;
+	color: var(--accent-100);
+	border-style: none;
+}
+
+.buttonContainers {
+	display: flex;
+	gap: 10px;
+}
+
+.rulesetButton {
+	flex: 1;
 	background-color: var(--primary-500);
 	border-radius: 10px;
 	padding: 10px;
@@ -20,17 +35,17 @@
 	border-style: none;
 }
 
-.rulesetElement:hover {
+.rulesetButton:hover {
 	background-color: var(--accent-100);
 	color: var(--neutral-700);
 }
 
-.rulesetElement:active {
+.rulesetButton:active {
 	background-color: var(--accent-100);
 	color: var(--neutral-700);
 }
 
-.rulesetElement:active {
+.rulesetButton:active {
 	background-color: var(--primary-100);
 	color: var(--accent-100);
 	opacity: 0.8;
