--- a/frontend/src/components/editor/config/config.module.css
+++ b/frontend/src/components/editor/config/config.module.css
@@ -45,6 +45,10 @@
 	padding: 0px 10px 0px 10px;
 }
 
+.seperator {
+	display: flex;
+}
+
 .zoneVisibilityRule {
 	border-radius: 10px;
 	padding: 0px 10px 0px 10px;
