--- a/frontend/src/components/editor/config/config.module.css
+++ b/frontend/src/components/editor/config/config.module.css
@@ -1,91 +1,5 @@
 @import '@styles/colors.module.css';
 
-.zoneList {
-	color: var(--primary-700);
-}
-
-.zoneList>ul {
-	display: flex;
-	flex-direction: column;
-	list-style-type: none;
-	background-color: var(--neutral-300);
-	border-radius: 3px;
-	padding: 8px;
-}
-
-.zoneDisplay {
-	display: flex;
-	flex-direction: column;
-	background-color: var(--accent-100);
-	padding: 8px;
-	border-radius: 3px;
-	gap: 10px;
-}
-
-.zoneVisibility {
-	display: flex;
-	flex-direction: row;
-	gap: 4px;
-}
-
-.zoneVisibilityHeader {
-	display: flex;
-	flex-direction: row;
-	background-color: var(--neutral-300);
-	padding: 0px 0px 0px 5px;
-	border-radius: 10px;
-	gap: 4px;
-}
-
-.zoneCleanup {
-	display: inline-flex;
-	align-self: flex-start;
-	background-color: var(--accent-500);
-	border-radius: 10px;
-	padding: 0px 10px 0px 10px;
-}
-
-.seperator {
-	display: flex;
-}
-
-.zoneVisibilityRule {
-	border-radius: 10px;
-	padding: 0px 10px 0px 10px;
-	background-color: var(--accent-500);
-}
-
-.zoneRulesContainer {
-	display: flex;
-}
-
-.zoneRules ul {
-	list-style-type: none;
-	display: flex;
-	gap: 10px;
-	margin: 0;
-	padding: 0;
-}
-
-.zoneRule {
-	color: inherit;
-	background-color: var(--primary-300);
-	padding: 0px 10px 0px 10px;
-	border-radius: 10px;
-}
-
-.zoneRule button {
-	background: transparent;
-	outline: none;
-	border: none;
-	color: var(--neutral-100);
-}
-
-
-.zoneRule button:hover {
-	color: var(--accent-300);
-}
-
 select {
 
 	margin: 0;
@@ -110,4 +24,60 @@ input[type="text"] {
 	color: inherit;
 	font: inherit;
 	outline: none;
+}
+
+
+.container {
+	color: var(--primary-700);
+}
+
+.elementListing {
+	display: flex;
+	flex-direction: column;
+	list-style-type: none;
+	background-color: var(--neutral-300);
+	border-radius: 3px;
+	padding: 8px;
+}
+
+.fieldListing {
+	display: flex;
+	flex-direction: column;
+	background-color: var(--accent-100);
+	padding: 8px;
+	border-radius: 3px;
+	gap: 10px;
+}
+
+.horizontalList {
+	list-style-type: none;
+	display: flex;
+	gap: 10px;
+	margin: 0;
+	padding: 0;
+}
+
+.listItem {
+	color: inherit;
+	background-color: var(--primary-300);
+	padding: 0px 10px 0px 10px;
+	border-radius: 10px;
+}
+
+.invisibleButton {
+	background: transparent;
+	outline: none;
+	border: none;
+	color: var(--neutral-100);
+}
+
+.invisibleButton:hover {
+	color: var(--accent-300);
+}
+
+.rounded {
+	align-self: flex-start;
+	border-radius: 10px;
+	padding: 0px 10px 0px 10px;
+	background-color: var(--accent-500);
 }
