--- a/frontend/src/components/editor/config/config.module.css
+++ b/frontend/src/components/editor/config/config.module.css
@@ -69,7 +69,7 @@ input[type="text"] {
 	background: transparent;
 	outline: none;
 	border: none;
-	color: var(--neutral-100);
+	color: var(--accent-700);
 }
 
 .invisibleButton:hover {
