style edit page

--- a/frontend/src/Blockly/blockly.module.css
+++ b/frontend/src/Blockly/blockly.module.css
@@ -1,6 +1,10 @@
 .blocklyDiv {
-	height: 50%;
 	width: 100%;
-	position: absolute;
-	bottom: 0;
+	height: 100%;
+}
+
+.container {
+	display: flex;
+	width: 80vw;
+	height: 80vh;
 }
