--- a/frontend/src/components/auth.module.css
+++ b/frontend/src/components/auth.module.css
@@ -2,7 +2,7 @@
 
 
 .inputContainer {
-	display: flex;
+	display: inline-flex;
 	flex-direction: column;
 	background-color: var(--primary-500);
 	border-radius: 8px;
@@ -21,9 +21,32 @@
 	margin-bottom: 5px;
 }
 
-.inputContainer button {
+.button {
 	background-color: var(--neutral-300);
-	padding: 10px;
+	border-style: none;
+	border-radius: 2px;
+	color: var(--primary-900);
+	padding: 3px 5px 3px 5px;
 }
 
-.error {}
+.button:hover {
+	color: var(--accent-900);
+	background-color: var(--primary-300);
+}
+
+.error {
+	width: 100%;
+	overflow-wrap: break-word;
+	word-break: break-all;
+}
+
+.errorWrap {
+	display: flex;
+}
+
+.authContainer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 10px;
+}
