--- a/frontend/src/styles/utility.module.css
+++ b/frontend/src/styles/utility.module.css
@@ -18,3 +18,36 @@
 	flex-direction: column;
 	align-items: center;
 }
+
+.pagination {
+	list-style: none;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	color: var(--accent-300);
+	margin-top: auto;
+}
+
+.paginationActive {
+	background-color: var(--primary-700);
+	border-radius: 50%;
+	padding: 10px;
+}
+
+.paginationPrev {
+	color: var(--primary-300);
+}
+
+.paginationNext {
+	color: var(--primary-300);
+}
+
+.paginationPage {
+	animation: ease-out 2s opacity;
+}
+
+.paginationPage:hover {
+	opacity: 0.8;
+	color: var(--neutral-100);
+}
